lib/kestrel-test-suite/testdata/memory_model/negative_conformance/not_with_non_builtin_protocol.ks
// test: diagnostics
// stdlib: false

module Test

protocol MyProtocol {}

struct Foo: not MyProtocol {} // ERROR: not a language feature protocol
